...
    
    @IBAction func statusAction(_ sender: Any) {
        //performSegue(withIdentifier: Segues.showStatus.rawValue, sender: self)
        
        let appDelegate = UIApplication.shared.delegate as! AppDelegate
        
        let activity = try! appDelegate.dbQueue.read { db in
            try Activity.fetchOne(db,
                                     sql: "SELECT * FROM activity order by local_id desc LIMIT 1")
        }
        
        uploadActivity(activity: activity!)
    }
...
