...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IrY-Y1-EMg">
                                <rect key="frame" x="16" y="16" width="38" height="42"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="Hn0-O9-My6"/>
                                    <constraint firstAttribute="width" secondItem="IrY-Y1-EMg" secondAttribute="height" multiplier="10:11" id="Upe-Lr-SyR"/>
                                </constraints>
                                <state key="normal" image="xmark.circle" catalog="system">
                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25"/>
                                </state>
                                <connections>
                                    <action selector="closeAction:" destination="78P-Hg-8xd" eventType="touchUpInside" id="ptH-E0-hkn"/>
                                    <action selector="closeAction:" destination="Yw9-wf-KPy" eventType="touchUpInside" id="rcN-ku-6G1"/>
                                </connections>
...
